# apple-flow

./: .env  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PLAN.md  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  config.example.toml  pyproject.toml
.jules/: bolt.md
agent-office/: README.md  SCAFFOLD.md  SOUL.md  setup.sh
agents/: README.md  catalog.toml
dashboard-app/: README.md
docs/: AGENT_OFFICE_PROMPT_PACK.md  AGENT_TEAMS.md  AI_INSTALL_MASTER_PROMPT.md  APPLE_CODE_PLAN.md  AUTOMATION_PROMPT_BUNDLE_SHORTCUTS.md  AUTOMATION_SHORTCUT_VARIABLES.md  AUTO_START_SETUP.md  BEGINNER_SETUP_10_MIN.md  CODEBASE_EXPLORATION_TEAM_ANALYSIS.md  CODEX_FLOW_DEV_PROMPT_PACK.md  ENV_SETUP.md  MACOS_GUI_APP_EXPORT.md  PROJECT_REFERENCE.md  PROMPT_PACK.md  QUICKSTART.md  README.md  SKILLS_AND_MCP.md
office-setup/: SCAFFOLD.md  setup.sh
scripts/: apple-flow-wrapper.sh  codex-relay-wrapper.sh  harness_eval_pack.py  install_automation.sh  install_autostart.sh  notion_direct.py  setup_autostart.sh  smoke_test.sh  start_beginner.sh  uninstall_autostart.sh
tests/: conftest.py  test_admin_api.py  test_admin_client.py  test_agents_catalog.py  test_agents_scripts.py  test_ambient.py  test_apple_tools.py  test_approval_handler.py  test_approval_lifecycle.py  test_approval_security.py  test_attachment_processor.py  test_attachments.py  test_calendar_egress.py  test_calendar_ingress.py  test_claude_cli_connector.py  test_cli_connector.py  test_cli_control.py  test_cline_connector.py  test_codex_cli_connector.py  test_command_parser.py  test_companion.py  (+69 more)
(+453 files in other folders)
